--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body {
     padding: 0;
     font-family: sans-serif;
     font-size: 24px;
+    background-color: #F7F7F7;
 }
 
 .content {
@@ -12,32 +13,26 @@ body {
 
 .navbar {
     border-bottom: 1px solid #dae0e4;
-    background: #fff;
-    height: 3.125rem;
     padding: 2px;
-}
-
-.navbar-nav {
-    flex-direction: row;
-}
-
-.navbar {
-    height: 36px;
 }
 
 .nav-link a:hover,
 a:hover {
     text-decoration: none;
-    color: red
+    color: red;
 }
 
 .navbar-brand {
     color: red !important;
 }
 
+.bg-dark {
+    background-color: #000 !important;
+}
+
 .nav-link a {
-    color: #24292e !important;
-    font-size: 14px;
+    color: #fff !important;
+    font-size: 18px;
 }
 
 .homeImg {
@@ -77,8 +72,26 @@ a:hover {
 
 .bg-image {
     height: 760.5px;
-    background-image: url("./static/images/background0.jpg");
+    background-image: url("./images/background0.jpg");
     background-size: cover;
+}
+
+.bg-img {
+    background-image: url("./images/gamebegin.png");
+    background-size: cover;
+    height: 300px;
+}
+
+.blue {
+    background-image: url("./images/blue.png");
+    background-size: cover;
+    height: 300px;
+}
+
+.orange {
+    background-image: url("./images/orange.png");
+    background-size: cover;
+    height: 300px;
 }
 
 .background {
@@ -129,7 +142,7 @@ a:hover {
     background-color: #fff;
     border-radius: 20px;
     padding: 10px 20px 10px 20px;
-    margin: 10px
+    margin: 10px;
 }
 
 .bg,
@@ -170,17 +183,71 @@ a:hover {
 }
 
 .col-sm-12>.bg-image {
-    height: 100%
+    height: 100%;
 }
 
 .card {
     box-shadow: 0 0.5px 0.5px 0 rgba(0, 0, 0, 0.2);
     background-color: rgba(255, 255, 255, 0.95);
+    height: 500px;
+}
+
+.card-full {
+    height: 100%;
 }
 
 .card-img-top {
-    border-top-left-radius: calc(.25rem - 1px);
-    border-top-right-radius: calc(.25rem - 1px);
-    margin: 40px;
-    width: 80% !important;
+    border-top-left-radius: calc(0.25rem - 1px);
+    border-top-right-radius: calc(0.25rem - 1px);
+    /* margin: 40px; */
+    /* width: 80% !important; */
+}
+
+.fa-shopping-cart {
+    color: white !important;
+}
+
+.badge-notify {
+    position: relative;
+    top: -10px !important;
+    color: red;
+    left: -2px;
+    background-color: white;
+    height: 100%;
+    border-radius: 60%;
+}
+
+.btn:hover {
+    cursor: pointer;
+}
+
+.text-red {
+    color: red;
+}
+
+.fa-remove {
+    font-size: 14px;
+    color: red;
+    cursor: pointer;
+}
+
+.back-to-shop,
+.back-to-shop:hover {
+    color: red;
+    background-color: white;
+}
+
+.pg-button {
+    color: white;
+    background-color: red;
+    border-radius: 50%;
+}
+
+.cat {
+    cursor: pointer;
+}
+
+.randomItemThumbnail {
+    width: 80%;
+    height: 80%;
 }
