--- a/src/index.css
+++ b/src/index.css
@@ -1,361 +1,407 @@
 body {
-    margin: 2px;
-    padding: 0;
-    font-family: sans-serif;
-    font-size: 24px;
-    background-color: #f7f7f7;
+  margin: 2px;
+  padding: 0;
+  font-family: sans-serif;
+  font-size: 24px;
+  background-color: #f7f7f7;
 }
 
 .content {
-    display: block;
-    position: relative;
+  display: block;
+  position: relative;
 }
 
 .navbar {
-    border-bottom: 1px solid #dae0e4;
-    padding: 2px;
+  border-bottom: 1px solid #dae0e4;
+  padding: 2px;
+  width: 100%;
 }
 
 .nav-link a:hover,
 a:hover {
-    text-decoration: none;
-    color: red;
+  text-decoration: none;
+  color: red;
 }
 
 .navbar-brand {
-    color: red !important;
+  color: red !important;
 }
 
 .bg-dark {
-    background-color: #000 !important;
+  background-color: #000 !important;
 }
 
 .nav-link a {
-    color: #fff !important;
-    font-size: 18px;
+  color: #fff !important;
+  font-size: 18px;
 }
 
 .homeImg {
-    height: 50% !important;
+  height: 50% !important;
 }
 
 .home {
-    padding: 0;
-    height: 600px !important;
-    background-color: #ccc5c3;
+  padding: 0;
+  height: 600px !important;
+  background-color: #ccc5c3;
 }
 
-.home div>p {
-    color: #fff !important;
-    font-size: 2rem !important;
+.home div > p {
+  color: #fff !important;
+  font-size: 2rem !important;
 }
 
 .center-block {
-    color: #fff;
-    display: -moz-box;
-    display: -ms-flexbox;
-    font-size: 18px;
-    font-weight: bold;
-    line-height: 24px;
-    margin: 48px auto;
-    margin-left: 22%;
-    position: relative;
-    width: 100%;
-    margin: 0 auto;
-    overflow: hidden;
-    padding: 10px 0;
-    align-items: center;
-    justify-content: space-around;
-    display: flex;
-    float: none;
+  color: #fff;
+  display: -moz-box;
+  display: -ms-flexbox;
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 24px;
+  margin: 48px auto;
+  margin-left: 22%;
+  position: relative;
+  width: 100%;
+  margin: 0 auto;
+  overflow: hidden;
+  padding: 10px 0;
+  align-items: center;
+  justify-content: space-around;
+  display: flex;
+  float: none;
 }
 
 .bg-image {
-    height: 760.5px;
-    background-image: url("./images/background0.jpg");
-    background-size: cover;
+  height: 760.5px;
+  background-image: url("./images/background0.jpg");
+  background-size: cover;
 }
 
 .bg-img {
-    background-image: url("./images/gamebegin.png");
-    background-size: cover;
-    height: 300px;
+  background-image: url("./images/gamebegin.png");
+  background-size: cover;
+  height: 300px;
 }
 
 .blue {
-    background-image: url("./images/blue.png");
-    background-size: cover;
-    height: 300px;
+  background-image: url("./images/blue.png");
+  background-size: cover;
+  height: 300px;
 }
 
 .orange {
-    background-image: url("./images/orange.png");
-    background-size: cover;
-    height: 300px;
+  background-image: url("./images/orange.png");
+  background-size: cover;
+  height: 300px;
 }
 
 .background {
-    font-family: PlayfairDisplay;
-    font-size: 48px;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.5;
-    letter-spacing: 1px;
-    color: #fff !important;
+  font-family: PlayfairDisplay;
+  font-size: 48px;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: 1px;
+  color: #fff !important;
 }
 
 .Vera-Bradley {
-    width: 236px;
-    height: 18px;
-    font-family: Montserrat;
-    font-weight: bold;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.5;
-    letter-spacing: 0.5px;
-    color: #2e2e2e;
-    margin-top: 24px;
+  width: 236px;
+  height: 18px;
+  font-family: Montserrat;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: 0.5px;
+  color: #2e2e2e;
+  margin-top: 24px;
 }
 
 .Carry-the-day-in-sty {
-    width: 236px;
-    font-family: OpenSans;
-    font-weight: 300;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.5;
-    letter-spacing: normal;
-    color: #2e2e2e;
+  width: 236px;
+  font-family: OpenSans;
+  font-weight: 300;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  color: #2e2e2e;
 }
 
 .Call-to-Action {
-    width: 10rem !important;
-    font-family: Montserrat;
-    font-weight: bold;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.5;
-    font-size: 24px;
-    letter-spacing: normal;
-    text-align: center;
-    color: #f62f5e;
-    background-color: #fff;
-    border-radius: 20px;
-    padding: 10px 20px 10px 20px;
-    margin: 10px;
+  width: 10rem !important;
+  font-family: Montserrat;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  font-size: 24px;
+  letter-spacing: normal;
+  text-align: center;
+  color: #f62f5e;
+  background-color: #fff;
+  border-radius: 20px;
+  padding: 10px 20px 10px 20px;
+  margin: 10px;
 }
 
 .bg,
 .bg:hover {
-    border-radius: 12px;
-    background-color: #f62f5e;
-    color: #fff;
-    padding: 10px 20px 10px 20px;
+  border-radius: 12px;
+  background-color: #f62f5e;
+  color: #fff;
+  padding: 10px 20px 10px 20px;
 }
 
 .Registration-is-on {
-    height: 12px;
-    font-family: Montserrat;
-    font-size: 18px;
-    font-weight: bold;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.5;
-    letter-spacing: normal;
-    text-align: center;
-    color: #2e2e2e;
+  height: 12px;
+  font-family: Montserrat;
+  font-size: 18px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  text-align: center;
+  color: #2e2e2e;
 }
 
 .Let-the-Game-begin {
-    font-family: PlayfairDisplay;
-    font-size: 48px;
-    font-weight: bold;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.5;
-    letter-spacing: 1px;
-    color: #2e2e2e;
+  font-family: PlayfairDisplay;
+  font-size: 48px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: 1px;
+  color: #2e2e2e;
 }
 
 .Bitmap {
-    width: 100%;
-    background-size: cover;
+  width: 100%;
+  background-size: cover;
 }
 
-.col-sm-12>.bg-image {
-    height: 100%;
+.col-sm-12 > .bg-image {
+  height: 100%;
 }
 
 .card {
-    box-shadow: 0 0.5px 0.5px 0 rgba(0, 0, 0, 0.2);
-    background-color: rgba(255, 255, 255, 0.95);
-    height: 500px;
+  box-shadow: 0 0.5px 0.5px 0 rgba(0, 0, 0, 0.2);
+  background-color: rgba(255, 255, 255, 0.95);
+  height: 400px;
 }
 
 .card-full {
-    height: 100%;
+  height: 100%;
 }
 
 .card-img-top {
-    border-top-left-radius: calc(0.25rem - 1px);
-    border-top-right-radius: calc(0.25rem - 1px);
+  border-top-left-radius: calc(0.25rem - 1px);
+  border-top-right-radius: calc(0.25rem - 1px);
 }
 
 .fa-shopping-cart {
-    color: white !important;
+  color: white !important;
 }
 
 .badge-notify {
-    position: relative;
-    top: -10px !important;
-    color: red;
-    left: -2px;
-    background-color: white;
-    height: 100%;
-    border-radius: 60%;
+  position: relative;
+  top: -10px !important;
+  color: red;
+  left: -2px;
+  background-color: white;
+  height: 100%;
+  border-radius: 60%;
 }
 
 .btn:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .text-red {
-    color: red;
+  color: red;
 }
 
 .fa-remove {
-    font-size: 14px;
-    color: red;
-    cursor: pointer;
+  font-size: 14px;
+  color: red;
+  cursor: pointer;
 }
 
 .back-to-shop,
 .back-to-shop:hover {
-    color: red;
-    background-color: white;
+  color: red;
+  background-color: white;
 }
 
 .pg-button {
-    color: white;
-    background-color: red;
-    border-radius: 50%;
-}
-
-.cat {
-    cursor: pointer;
+  color: white;
+  background-color: red;
+  border-radius: 50%;
 }
 
 .randomItemThumbnail {
-    width: 80%;
-    height: 80%;
+  width: 80%;
+  height: 80%;
 }
 
 .btn-circle {
-    width: 20px;
-    height: 20px;
-    padding: 6px 0px;
-    border-radius: 15px;
-    text-align: center;
-    font-size: 12px;
-    line-height: 1.42857;
-    margin-right: 8px;
-    border: 0.1px solid #B4B4B4
+  width: 20px;
+  height: 20px;
+  padding: 6px 0px;
+  border-radius: 15px;
+  text-align: center;
+  font-size: 12px;
+  line-height: 1.42857;
+  margin-right: 8px;
+  border: 0.1px solid #b4b4b4;
+}
+
+.circle {
+  border-radius: 50%;
+  border: 1px solid #dbd8d8;
+  margin: 1px;
 }
 
 .btn-rec {
-    width: 80px;
-    height: 40px;
-    border-radius: 4px;
-    background-color: #f7f7f7;
-    margin-right: 16px;
-    border: 0.5px solid #B4B4B4
+  width: 80px;
+  height: 40px;
+  border-radius: 4px;
+  background-color: #f7f7f7;
+  margin-right: 16px;
+  border: 0.5px solid #b4b4b4;
 }
 
 .White {
-    background-color: white;
+  background-color: white;
 }
 
 .Red {
-    background-color: red;
+  background-color: red;
 }
 
 .Black {
-    background-color: black;
+  background-color: black;
 }
 
 .Orange {
-    background-color: orange;
+  background-color: orange;
 }
 
 .Yellow {
-    background-color: yellow;
+  background-color: yellow;
 }
 
 .Green {
-    background-color: green;
+  background-color: green;
 }
 
 .Blue {
-    background-color: blue;
+  background-color: blue;
 }
 
 .Indigo {
-    background-color: indigo;
+  background-color: indigo;
 }
 
 .Purple {
-    background-color: purple;
+  background-color: purple;
 }
 
 .btn-rec:focus {
-    background-color: red;
-    outline: 0 !important;
+  outline: 0 !important;
 }
 
 .overlay {
-    opacity: 0.9;
-    position: absolute;
-    top: 0;
-    z-index: 2;
-    width: 100%;
+  opacity: 0.9;
+  position: absolute;
+  top: 0;
+  z-index: 2;
+  width: 90%;
 }
 
 .hideOverlay {
-    opacity: 0;
-    position: absolute;
-    top: 0;
-    width: 100%;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
 }
 
 .btn-round {
-    border-radius: 50%;
-    width: 40px;
-    background-color: #b4b4b4;
-    margin: 1px;
+  border-radius: 50%;
+  width: 40px;
+  background-color: #b4b4b4;
+  margin: 1px;
 }
 
 #qty {
-    width: 60px !important;
-    margin: 0;
+  width: 60px !important;
+  margin: 0;
 }
 
 .black {
-    color: black;
+  color: black;
 }
 
 .item-image {
-    width: 200px;
-    height: 300px;
+  width: 200px;
+  height: 300px;
 }
 
 .thumbnail {
-    border: 1px solid green;
-    width: 80px;
-    height: 80px;
-    box-shadow: 15px #;
+  border: 1px solid green;
+  width: 80px;
+  height: 80px;
+  box-shadow: 15px;
 }
 
 button:focus,
 .btn:focus {
-    outline: 0 !important;
+  outline: 0 !important;
+}
+
+.selected_size {
+  background-color: rgb(117, 201, 145);
+}
+
+.selected_color {
+  padding: 10px;
+  border: 5px solid rgb(117, 201, 145);
+}
+
+.cat,
+.filter li {
+  cursor: pointer;
+  border-radius: 4px;
+  padding: 2px 0 2px 2px;
+  margin-bottom: 1px;
+}
+
+li:hover {
+  cursor: pointer;
+  margin: 0.2;
+  color: red;
+  left: 0.1em;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding-left: 20px;
+  font-size: 20px;
+}
+
+.left,
+.pagination {
+  background-color: rgb(231, 228, 228);
+}
+
+.pagination {
+  widows: 100px;
+}
+
+li > ul {
+  color: black !important;
 }
